# channel

./: .gitignore  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: Dockerfile  README.md  app.py  pyproject.toml
frontend/: Dockerfile
