[tool.poetry]
name = "Channel-backend"
version = "0.1.0"
description = "Backend API for Channel"
authors = ["Casey Joiner <caseyejoiner@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.115.12,<0.116.0"
pydantic-settings = ">=2.0.0"
uvicorn = { extras = ["standard"], version = ">=0.34.2,<0.35.0" }
sqlalchemy = ">=2.0.40,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
python-dotenv = ">=1.1.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"